<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:clipToPadding="false"
        android:paddingBottom="24dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/rangeGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@id/specificRangePicker"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/specificRangePicker">

                <Button
                    android:id="@+id/selectDate"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="60dp"
                    android:layout_height="32dp"
                    android:background="@drawable/chart_button_state"
                    android:backgroundTintMode="add"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="8dp"
                    android:text="@string/button_chart_day"
                    android:textColor="@color/dark_87"
                    android:textSize="12sp"
                    app:cornerRadius="4dp" />

                <Button
                    android:id="@+id/selectWeek"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="60dp"
                    android:layout_height="32dp"
                    android:background="@drawable/chart_button_state"
                    android:backgroundTintMode="add"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="8dp"
                    android:text="@string/button_chart_week"
                    android:textColor="@color/dark_87"
                    android:textSize="12sp"
                    app:cornerRadius="4dp" />

                <Button
                    android:id="@+id/selectMonth"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="60dp"
                    android:layout_height="32dp"
                    android:background="@drawable/chart_button_state"
                    android:backgroundTintMode="add"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="8dp"
                    android:text="@string/button_chart_month"
                    android:textSize="12sp"
                    app:cornerRadius="4dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/specificRangePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/previous"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="8dp"
                    android:src="@drawable/ic_chevron_left_black_24dp" />

                <TextView
                    android:id="@+id/focusedDateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/dark_54"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="8dp"
                    android:src="@drawable/ic_chevron_right_black_24dp" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/lineChartParent"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:elevation="4dp"
                app:cardCornerRadius="8dp"
                app:layout_constraintBottom_toTopOf="@id/pieChartParent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/specificRangePicker">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:text="@string/header_chart_movement"
                        android:textColor="@color/dark_54"
                        android:textSize="16sp" />

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/lineChart"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp">

                    </com.github.mikephil.charting.charts.LineChart>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/pieChartParent"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="16dp"
                android:elevation="4dp"
                app:cardCornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lineChartParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:text="@string/header_chart_share"
                        android:textColor="@color/dark_54"
                        android:textSize="16sp" />

                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/pieChart"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp">

                    </com.github.mikephil.charting.charts.PieChart>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>